[package]
name = "cumulus-parachain-system"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "pallet to manage parachain upgrades"

[dependencies]
# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }
cumulus-runtime = { path = "../runtime", default-features = false }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "2.0.0-rc5", default-features = false, branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
hash-db = { version = "0.15.2", default-features = false }

[dev-dependencies]
sp-externalities = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
cumulus-test-relay-sproof-builder = { path = "../test/relay-sproof-builder" }
hex-literal = "0.2.1"
lazy_static = "1.4"

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'pallet-balances/std',
	'cumulus-runtime/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'hash-db/std',
	'sp-state-machine/std',
	'sp-trie/std',
	'frame-system/std',
	'cumulus-primitives/std',
]
