[package]
name = "polkadot-omni-node"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"
description = "Generic binary that can run a parachain node with u32 block number and Aura consensus"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre = { workspace = true }
polkadot-omni-node-lib.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }

[build-dependencies]
substrate-build-script-utils.default-features = true
substrate-build-script-utils.workspace = true

[features]
default = []
runtime-benchmarks = [
	"polkadot-omni-node-lib/runtime-benchmarks",
]
try-runtime = [
	"polkadot-omni-node-lib/try-runtime",
]
