[package]
name = "polkadot-parachain-bin"
version = "4.0.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"
description = "Runs a polkadot parachain node"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "polkadot-parachain"
path = "src/main.rs"

[dependencies]
color-eyre = { workspace = true }
hex-literal = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

# Local
asset-hub-rococo-runtime = { workspace = true, default-features = true, features = [
	"runtime-benchmarks",
] }
asset-hub-westend-runtime = { workspace = true, features = [
	"runtime-benchmarks",
] }
bridge-hub-rococo-runtime = { workspace = true, default-features = true, features = [
	"runtime-benchmarks",
] }
bridge-hub-westend-runtime = { workspace = true, default-features = true, features = [
	"runtime-benchmarks",
] }
collectives-westend-runtime = { workspace = true, features = [
	"runtime-benchmarks",
] }
coretime-rococo-runtime = { workspace = true, features = [
	"runtime-benchmarks",
] }
coretime-westend-runtime = { workspace = true, features = [
	"runtime-benchmarks",
] }
glutton-westend-runtime = { workspace = true, features = [
	"runtime-benchmarks",
] }
parachains-common = { workspace = true, default-features = true, features = [
	"runtime-benchmarks",
] }
penpal-runtime = { workspace = true, features = ["runtime-benchmarks"] }
people-rococo-runtime = { workspace = true, features = ["runtime-benchmarks"] }
people-westend-runtime = { workspace = true, features = ["runtime-benchmarks"] }
polkadot-omni-node-lib = { features = [
	"rococo-native",
	"westend-native",
], workspace = true }
rococo-parachain-runtime = { workspace = true, features = [
	"runtime-benchmarks",
] }

# Substrate
sc-chain-spec = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true, features = [
	"runtime-benchmarks",
] }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }

# Polkadot
xcm = { workspace = true, default-features = true, features = [
	"runtime-benchmarks",
] }

# Cumulus
cumulus-client-consensus-aura = { workspace = true }
cumulus-primitives-core = { workspace = true, default-features = true, features = [
	"runtime-benchmarks",
] }
yet-another-parachain-runtime = { workspace = true, features = [
	"runtime-benchmarks",
] }

[dev-dependencies]
assert_cmd = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = []
try-runtime = [
	"polkadot-omni-node-lib/try-runtime",

	"asset-hub-rococo-runtime/try-runtime",
	"asset-hub-westend-runtime/try-runtime",
	"bridge-hub-rococo-runtime/try-runtime",
	"bridge-hub-westend-runtime/try-runtime",
	"collectives-westend-runtime/try-runtime",
	"coretime-rococo-runtime/try-runtime",
	"coretime-westend-runtime/try-runtime",
	"glutton-westend-runtime/try-runtime",
	"parachains-common/try-runtime",
	"penpal-runtime/try-runtime",
	"people-rococo-runtime/try-runtime",
	"people-westend-runtime/try-runtime",
]
fast-runtime = [
	"bridge-hub-rococo-runtime/fast-runtime",
	"bridge-hub-westend-runtime/fast-runtime",
	"coretime-rococo-runtime/fast-runtime",
	"coretime-westend-runtime/fast-runtime",
]
