[package]
name = "polkadot-parachain-bin"
version = "4.0.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"
description = "Runs a polkadot parachain node"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "polkadot-parachain"
path = "src/main.rs"

[dependencies]
color-eyre = { workspace = true }
hex-literal = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

# Local
asset-hub-rococo-runtime = { workspace = true, default-features = true }
asset-hub-westend-runtime = { workspace = true, default-features = true }
bridge-hub-rococo-runtime = { workspace = true, default-features = true }
bridge-hub-westend-runtime = { workspace = true, default-features = true }
collectives-westend-runtime = { workspace = true }
coretime-westend-runtime = { workspace = true }
glutton-westend-runtime = { workspace = true }
parachains-common = { workspace = true, default-features = true }
penpal-runtime = { workspace = true }
people-westend-runtime = { workspace = true }
polkadot-omni-node-lib = { features = [
	"rococo-native",
	"westend-native",
], workspace = true }

# Substrate
sc-chain-spec = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }

# Polkadot
polkadot-jemalloc-shim = { workspace = true }
xcm = { workspace = true, default-features = true }

# Cumulus
cumulus-client-consensus-aura = { workspace = true }
cumulus-primitives-core = { workspace = true, default-features = true }
yet-another-parachain-runtime = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
polkadot-jemalloc-shim = { workspace = true, features = ["jemalloc-allocator"] }

[dev-dependencies]
assert_cmd = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = []
jemalloc-allocator = ["polkadot-jemalloc-shim/jemalloc-allocator"]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-omni-node-lib/runtime-benchmarks",
	"sc-service/runtime-benchmarks",

	"asset-hub-rococo-runtime/runtime-benchmarks",
	"asset-hub-westend-runtime/runtime-benchmarks",
	"bridge-hub-rococo-runtime/runtime-benchmarks",
	"bridge-hub-westend-runtime/runtime-benchmarks",
	"collectives-westend-runtime/runtime-benchmarks",
	"coretime-westend-runtime/runtime-benchmarks",
	"glutton-westend-runtime/runtime-benchmarks",
	"penpal-runtime/runtime-benchmarks",
	"people-westend-runtime/runtime-benchmarks",
	"xcm/runtime-benchmarks",
	"yet-another-parachain-runtime/runtime-benchmarks",
]
try-runtime = [
	"polkadot-omni-node-lib/try-runtime",

	"asset-hub-rococo-runtime/try-runtime",
	"asset-hub-westend-runtime/try-runtime",
	"bridge-hub-rococo-runtime/try-runtime",
	"bridge-hub-westend-runtime/try-runtime",
	"collectives-westend-runtime/try-runtime",
	"coretime-westend-runtime/try-runtime",
	"glutton-westend-runtime/try-runtime",
	"parachains-common/try-runtime",
	"penpal-runtime/try-runtime",
	"people-westend-runtime/try-runtime",
]
fast-runtime = [
	"bridge-hub-rococo-runtime/fast-runtime",
	"bridge-hub-westend-runtime/fast-runtime",
	"coretime-westend-runtime/fast-runtime",
]

[package.metadata.cargo-udeps.ignore]
normal = ["polkadot-jemalloc-shim"]
